# djangoProject

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
dataGoal/: admin.py  api.py  apps.py  models.py  tests.py  urls.py  views.py
dataGoal/migrations/: 0001_initial.py  0002_temporada_remove_partit_equip_visitant_and_more.py  0003_remove_estadistiquesequip_escut_and_more.py  0004_comparacio_user.py  0004_comparacio_user_estadistiquesequip_user_and_more.py  0005_alter_comparacio_user.py  0006_alter_comparacio_user.py  0007_estadistiquesequip_user_temporada_user_and_more.py  0008_merge_20240509_0954.py  0009_remove_estadistiquesequip_user_remove_temporada_user.py  0010_comparacio_created_during_test_alter_comparacio_user.py  0011_remove_comparacio_created_during_test.py
dataGoal/static/: stylesConfirmDelete.css  stylesDash.css  stylesDashboard.css  stylesLoading.css  stylesMakeComp.css  stylesMakeCompSelection.css  stylesRetr.css  stylesRetrieve.css
dataGoal/templates/: confirm-delete.html  dashboard.html  edit-comparative.html  equip.html  equips.html  loading.html  make-comparative-selection.html  make-comparative.html  retrieve_comparative_selection.html
djangoProject/: __init__.py  settings.py  urls.py  wsgi.py
features/: create_comparative.feature  delete_comparative.feature  edit_comparative.feature  environment.py
features/steps/: authentication.py  create_comparative.py  delete_comparative.py  edit_comparative.py
login/: forms.py  urls.py  views.py
login/static/: styles.css  (+7 more)
test1/: __init__.py  models.py  views.py
(+6 files in other folders)
