[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Albert <albertricart2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
requests = "^2.31.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
