[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Albert <albertricart2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
requests = "^2.31.0"
matplotlib = "^3.8.4"
your-app = "^0.1.0"
behave = "^1.2.6"
splinter = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
